--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -38,3 +38,4 @@ jobs:
           WECOM_WEBHOOK: ${{ secrets.WECOM_WEBHOOK }}
           BARK_DEVICEKEY: ${{ secrets.BARK_DEVICEKEY }}
           FEISHU_DEVICEKEY: ${{ secrets.FEISHU_DEVICEKEY }}
+      - uses: gautamkrishnar/keepalive-workflow@master
